log/build_2020-11-16_17-06-46/Torcs_5/stderr.log
  File "/home/rtos/dev_ws/install/Torcs_5/lib/python3.8/site-packages/Torcs_5/splash/component/sink_steer.py", line 4
    from std_msgs.msg import
                            ^
SyntaxError: invalid syntax

